# OmniFlight

./: .gitignore  CMakeLists.txt  README.md
API/API_I2C/: API_I2C.c  API_I2C.h  i2c_hal.h  i2c_soft.c  soft_i2c_hal.h
API/API_SPI/: API_SPI.h
API/inc/: Encoder.h  pwm.h  usart.h
API/src/: Encoder.c  exti.c  pwm.c  usart.c
A_Entry/: main.c
BSP/BMP280/: BMP280.c  BMP280.h
BSP/Buzzer/: Buzzer.c  Buzzer.h
BSP/Dshot/: Dshot.c  Dshot.h
BSP/MPU6050/: MPU6050.c  MPU6050_Int.c  MPU6050_Int.h
BSP/MPU6050/eMPL/: inv_mpu.c  inv_mpu_dmp_motion_driver.c
BSP/Motor/: Motor.c  Motor.h
BSP/NRF24L01/: NRF24L01.c  NRF24L01.h
BSP/QMC5883P/: QMC5883P.c  QMC5883P.h
BSP/STP23L/: STP23L.c  STP23L.h
Core/STM32F103/f103_soft_i2c/: f103_soft_i2c.c  f103_soft_i2c.h
Core/STM32F103/f103_soft_spi/: f103_soft_spi.c  f103_soft_spi.h
Core/STM32F103/inc/: f103_Encoder.h
Core/STM32F103/src/: f103_Encoder.c  f103_tim.c  f103_usart.c
Core/STM32F407/f407_hw_i2c/: f407_hw_i2c.c  f407_hw_i2c.h
Core/STM32F407/f407_soft_i2c/: f407_soft_i2c.c  f407_soft_i2c.h
Core/STM32F407/f407_soft_spi/: f407_soft_spi.c  f407_soft_spi.h
Core/STM32F407/inc/: f407_Encoder.h  f407_dma.h  f407_pwm.h
Core/STM32F407/src/: f407_Encoder.c  f407_dma.c  f407_pwm.c  f407_tim.c  f407_usart.c
Enroll/: 103_hw_config.h  407_hw_config.h  Enroll.c  Enroll.h  Enroll_Internal.h  G3507_hw_config.h
SYSTEM/: BusRate.h  IrqPriority.h  sys.c
app/Altitude/: Altitude.c  Altitude.h
app/Control/: Control.c  Control.h
app/Control_Task/: Control_Task.c  Control_Task.h
app/IMU/: IMU.c  IMU.h
app/My_Usart/: My_Usart.c  My_Usart.h
app/PID/: PID.c
docs/: arch-guide.md
